# felis

./: .gitignore  .pre-commit-config.yaml  .travis.yml  .yamllint.yaml  COPYRIGHT  Dockerfile  Makefile  README.md  README.rst  SConstruct  build.sh  metadata.yaml  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py  types.txt
.github/: pull_request_template.md
.github/workflows/: build.yaml  doc.yaml  docker.yaml  docs.yaml  docstyle.yaml  lint.yaml  yamllint.yaml
bin.src/: felis
doc/: conf.py  index.rst
docs/: CHANGES.rst  api.rst  conf.py  documenteer.toml  index.rst
docs/changes/: DM-45133.feature.rst  DM-45263.feature.rst  DM-45619.feature.rst  DM-45623.feature.rst  DM-45938.feature.rst  DM-46002.bugfix.rst  DM-46130.feature.rst  DM-46240.api.rst  DM-47256.removal  DM-47256.removal.rst  DM-47602.misc.rst  DM-47900.misc.rst  DM-48167.feature.rst  DM-48204.feature.rst  DM-48427.feature.rst  DM-48616.removal.rst  DM-48925.feature.rst  DM-49446.feature.rst  DM-50899.feature.rst  DM-50914.feature.rst  DM-51376.feature.rst  DM-51502.feature.rst  DM-51676.feature.rst  DM-51707.bugfix.rst  DM-52344.feature.rst  DM-52812.bugfix.rst  DM-52910.feature.rst  DM-53031.feature.rst  DM-53083.bugfix.rst  DM-53293.misc.rst  DM-53338.feature.rst  DM-53392.feature.rst  DM-53664.feature.rst  DM-53979.bugfix.rst  DM-53999.misc.rst  DM-54856.feature.rst  DM-54876.feature.rst  DM-55343.api.rst
docs/dev/: internals.rst
docs/user-guide/: cli.rst  databases.rst  datatypes.rst  examples.rst  index.rst  installation.rst  intro.rst  model.rst  tap.rst  validation.rst
examples/merge/: README.md  locations.yml  point-extra.yml  point.yml
examples/modify-tap/: README.md  data_release.yml  point.yml
felis/: __init__.py  cli.py  felistypes.py  model.py  tap.py  test.yml  version.py
felis/db/: sqltypes.py
presentations/: ivoa-college-park-2018.html  ivoa-college-park-2018.md
python/felis/: __init__.py  check.py  cli.py  datamodel.py  diff.py  felis_schema.json  felistypes.py  metadata.py  model.py  schema.py  simple.py  sql.py  tap.py  tap_schema.py  types.py  utils.py  validation.py  version.py  visitor.py
python/felis/browser/: __init__.py  render.py
python/felis/browser/static/: sidebar.js  style.css
python/felis/browser/templates/: index.html.j2  schema.html.j2  table.html.j2  tree_section_macro.j2
python/felis/config/tap_schema/: columns.csv  key_columns.csv  keys.csv  schemas.csv  tables.csv  tap_schema_extensions.yaml  tap_schema_std.yaml
python/felis/db/: _database_context.py  _dialects.py  _variants.py  database_context.py  ddl.py  dialects.py  schema.py  sqltypes.py  typeparser.py  utils.py  variants.py
python/felis/tests/: postgresql.py  run_cli.py  utils.py
python/felis/types/: abstract.py  properties.py  simple.py  sql.py
python/lsst/felis/types/: abstract.py  attributes.py  properties.py  simple.py  sql.py
scripts/: README.md  install-base-packages.sh  install-dependency-packages.sh  modify.awk  report.awk
tests/: test_browser.py  test_check.py  test_cli.py  test_database_context.py  test_datamodel.py  test_datatypes.py  test_db.py  test_ddl.py  test_diff.py  test_import_modules.py  test_metadata.py  test_model.py  test_postgres.py  test_simple.py  test_sql.py  test_tap.py  test_tap_schema.py  test_tap_schema_pg.py  test_tap_schema_postgres.py  test_typeparser.py  test_types.py  test_utils.py  test_validation.py
tests/data/: sales.yaml  test-merge.yml  test.yml  test_composite_keys.yaml  test_ddl.yaml  test_diff1.yaml  test_diff2.yaml  test_id_generation.yaml  test_serialization.yaml  test_tap_schema.yaml  test_tap_schema_nonstandard.yaml  test_vounit.yaml
ups/: felis.table
