[build-system]
requires = ["setuptools", "lsst-versions >= 1.3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lsst-felis"
description = "A vocabulary for describing catalogs and acting on those descriptions"
license = {text = "GNU General Public License v3 or later (GPLv3+)"}
readme = "README.md"
authors = [
    {name="Rubin Observatory Data Management", email="dm-admin@lists.lsst.org"},
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy"
]
keywords = ["lsst"]
dependencies = [
    "astropy >= 4",
    "sqlalchemy >= 1.4",
    "click >= 7",
    "pyyaml >= 6",
    "pydantic >= 2, < 3",
    "lsst-utils"
]
requires-python = ">=3.11.0"
dynamic = ["version"]

[project.urls]
Homepage = "https://felis.lsst.io"
Source = "https://github.com/lsst/felis"

[project.optional-dependencies]
test = [
    "pytest >= 3.2"
]
dev = [
    "documenteer[guide]"
]

[tool.pytest.ini_options]

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools]
zip-safe = true
license-files = ["COPYRIGHT", "LICENSE"]

[tool.setuptools.package-data]
"felis" = ["py.typed"]

[tool.setuptools.dynamic]
version = { attr = "lsst_versions.get_lsst_version" }

[project.scripts]
felis = "felis.cli:cli"


[tool.towncrier]
    package = "felis"
    package_dir = "python"
    filename = "docs/felis/CHANGES.rst"
    directory = "docs/changes"
    title_format = "felis {version} {project_date}"
    issue_format = "`{issue} <https://jira.lsstcorp.org/browse/{issue}>`_"


    [[tool.towncrier.type]]
        directory = "feature"
        name = "New Features"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "api"
        name = "API Changes"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "bugfix"
        name = "Bug Fixes"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "perf"
        name = "Performance Enhancement"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "misc"
        name = "Other Changes and Additions"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "removal"
        name = "An API Removal or Deprecation"
        showcontent = false

[tool.black]
line-length = 110
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 110

[tool.lsst_versions]
write_to = "python/felis/version.py"

[tool.ruff]
line-length = 110
target-version = "py311"
exclude = [
    "__init__.py",
    "lex.py",
    "yacc.py",
]

[tool.ruff.lint]
ignore = [
    "D100",
    "D102",
    "D104",
    "D105",
    "D107",
    "D200",
    "D203",
    "D205",
    "D213",
    "D400",
    "D413",
    "N802",
    "N803",
    "N806",
    "N812",
    "N815",
    "N816",
    "N999",
    "UP007",  # Allow UNION in type annotation
]
select = [
    "E",  # pycodestyle
    "F",  # pycodestyle
    "N",  # pep8-naming
    "W",  # pycodestyle
    "D",  # pydocstyle
    "UP",  # pyupgrade
]

[tool.pydeps]
max_bacon = 2
no_show = true
verbose = 0
pylib = false
format = "png"
exclude = [
    "sqlalchemy"
]
