[metadata]
name = felis
description = A vocabulary for describing catalogs and acting on those descriptions
author = Rubin Observatory Data Management
url = https://github.com/lsst-dm/felis
classifiers =
	Intended Audience :: Science/Research
	License :: OSI Approved ::  GNU General Public License v3 or later (GPLv3+)
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Topic :: Scientific/Engineering :: Astronomy
long_description = file: README.md
long_description_content_type = text/markdown
version = attr: lsst.felis.__version__

[options]
zip_safe = True
package_dir =
	=python
packages = find:
setup_requires =
	setuptools >=46.0
install_requires =
	astropy
	sqlalchemy
	pyyaml
	pyld
	click
tests_require =
	pytest >= 3.2
	flake8 >= 3.7.5
	pytest-flake8 >= 1.0.4
	pytest-openfiles >= 0.5.0

[options.entry_points]
console_scripts =
	felis = felis.cli:cli

[options.packages.find]
where = python

[options.package_data]
felis = py.typed

[flake8]
max-line-length = 110
max-doc-length = 79
ignore = E203, W503, N802, N803, N806, N812, N815, N816
exclude = __init__.py

[tool:pytest]
